Integracion de la visualizacion de las notificaciones por la app

--- a/Frontend/Agronomo/Inicio/inicio_agronomo.html
+++ b/Frontend/Agronomo/Inicio/inicio_agronomo.html
@@ -63,5 +63,131 @@
     nombreUsuario.addEventListener("click", toggleMenu);
   </script>
 
+  <!--
+  --------------------------------
+  notificaciones emergentes
+  --------------------------------
+  -->
+
+  <!-- Campana de notificaciones con SVG -->
+  <div id="notificacion-contenedor" style="position: absolute; top: 59px; left: 1150px; cursor: pointer;">
+    <svg id="campana-icono" xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 0 24 24" width="32" fill="#344E41" title="Notificaciones">
+      <path d="M0 0h24v24H0z" fill="none"/>
+      <path d="M12 22c1.1 0 1.99-.9 1.99-2h-4A1.99 1.99 0 0012 22zm6-6V9a6 6 0 00-12 0v7l-2 2v1h16v-1l-2-2z"/>
+    </svg>
+    <!-- Burbuja de conteo -->
+    <span id="burbuja-noti" style="
+      display: none;
+      position: absolute;
+      top: -5px;
+      right: -5px;
+      background: red;
+      color: white;
+      font-size: 12px;
+      padding: 3px 7px;
+      border-radius: 50%;
+      font-family: Arial, sans-serif;
+      font-weight: bold;
+      z-index: 1000;">0</span>
+  </div>
+
+
+
+  <!-- Panel de notificaciones emergentes -->
+  <div id="panel-notificaciones" style="
+    display: none; position: absolute; top: 115px; left: 1150px; width: 280px; background-color: white; border: 1px solid #ccc; border-radius: 10px; 
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.15); padding: 12px; z-index: 999; font-family: 'IBM Plex Mono'; font-size: 14px; color: #344E41;">
+    <strong>Notificaciones recientes</strong>
+    <ul id="lista-notificaciones" style="list-style: none; padding: 0; margin-top: 10px;">
+      <li>No hay notificaciones nuevas.</li>
+    </ul>
+  </div>
+
+  <script>
+    const campana = document.getElementById("campana-icono");
+    const panel = document.getElementById("panel-notificaciones");
+    const burbuja = document.getElementById("burbuja-noti");
+
+    // Abrir/cerrar panel
+    campana.addEventListener("click", () => {
+      panel.style.display = panel.style.display === "none" ? "block" : "none";
+    });
+
+    // Cargar notificaciones desde backend
+    async function cargarNotificaciones() {
+      const correo = localStorage.getItem("correoUsuario");
+      const ul = document.getElementById("lista-notificaciones");
+      
+      if (!correo) {
+        ul.innerHTML = "<li>No se encontró correo de usuario</li>";
+        burbuja.style.display = "none";
+        return;
+      }
+
+      ul.innerHTML = "<li>Cargando notificaciones...</li>";
+
+      try {
+        const res = await fetch(`http://localhost:5000/notificaciones?correo=${correo}`);
+        const datos = await res.json();
+
+        ul.innerHTML = "";
+
+        // Actualizar burbuja
+        if (datos.length > 0) {
+          burbuja.textContent = datos.length;
+          burbuja.style.display = "inline-block";
+        } else {
+          burbuja.style.display = "none";
+          ul.innerHTML = "<li>No hay notificaciones activas.</li>";
+          return;
+        }
+
+        datos.forEach(noti => {
+          const li = document.createElement("li");
+          li.innerHTML = `
+            <strong>${noti.nombre_alerta}</strong><br>
+            ${noti.descripcion}<br>
+            <em>${noti.parcela}</em><br>
+            <small>${new Date(noti.timestamp_alerta).toLocaleString()}</small><br>
+            <button style="margin-top: 5px; background-color:#a3b18a; border:none; padding:5px 10px; border-radius:6px; cursor:pointer"
+              onclick="marcarLeida('${noti._id}')">Descartar</button>
+          `;
+          li.style.marginBottom = "10px";
+          ul.appendChild(li);
+        });
+      } catch (error) {
+        console.error("Error al cargar notificaciones:", error);
+        ul.innerHTML = "<li>Error al conectar con el servidor.</li>";
+        burbuja.style.display = "none";
+      }
+    }
+
+    // Marcar como leída una notificación
+    async function marcarLeida(id) {
+      try {
+        const res = await fetch("http://localhost:5000/notificaciones/marcar-leida", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ id })
+        });
+
+        if (res.ok) {
+          cargarNotificaciones();
+        } else {
+          alert("Error al marcar como leída");
+        }
+      } catch (err) {
+        console.error("Error:", err);
+        alert("No se pudo conectar al servidor.");
+      }
+    }
+
+    // Cargar al abrir el panel
+    campana.addEventListener("click", cargarNotificaciones);
+
+    // Cargar automáticamente al entrar a la página
+    document.addEventListener("DOMContentLoaded", cargarNotificaciones);
+  </script>
+
    
 </div>
